# accurate-kosinski

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE.txt  Makefile  README.md  decomp.c  kosinski.c  kosinski_compress.c  kosinski_compress.h  kosinski_decompress.c  kosinski_decompress.h  kosinski_moduled.c  kosinski_moduled.h  kosinski_moduled_compress.c  kosinski_moduled_compress.h  kosinski_moduled_decompress.c  kosinski_moduled_decompress.h  load-file-to-buffer.c  load-file-to-buffer.h  load_file_to_buffer.c  load_file_to_buffer.h  main-compare.c  main-compress-asm.c  main-compress.c  main-decompress.c  main-moduled-compare.c  main-moduled-compress.c  main-moduled-decompress.c  main.c  main2.c  main3.c  main_compare.c  main_compress.c  main_compress_asm.c  main_decompress.c  main_moduled_compare.c  main_moduled_compress.c  main_moduled_decompress.c  memory-stream.c  (+5 more)
lib/: clowncommon.h  kosinski-compress.c  kosinski-compress.h  kosinski-decompress.c  kosinski-decompress.h  kosinski-moduled-compress.c  kosinski-moduled-compress.h  kosinski-moduled-decompress.c  kosinski-moduled-decompress.h  kosinski_compress.c  kosinski_compress.h  kosinski_decompress.c  kosinski_decompress.h  kosinski_moduled_compress.c  kosinski_moduled_compress.h  kosinski_moduled_decompress.c  kosinski_moduled_decompress.h  memory_stream.c  memory_stream.h  minmax.h
